[package]
name = "kornia-algebra"
description = "Algebraic types for kornia-rs"
authors = ["kornia.org <christie@kornia.org>"]
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bench]]
harness = false
name = "bench_linalg"

[[bench]]
harness = false
name = "bench_lie_group"

[[bench]]
harness = false
name = "bench_varpro"

[dependencies]
approx = { workspace = true, optional = true }
glam = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

# Benchmark dependencies (optional)
apex-solver = { version = "1.0", optional = true }
sophus = { version = "0.15.0", optional = true }
varpro = { version = "0.12", optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
faer = { workspace = true }
nalgebra = { workspace = true }

[features]
approx = ["dep:approx"]
bench_external = ["dep:apex-solver", "dep:sophus", "dep:varpro"]
[[bench]]
harness = false
name = "bench_bundle_adjustment"

[[bench]]
harness = false
name = "bench_apex_ba" 
