[package]
name = "kornia-algebra"
description = "Algebraic types for kornia-rs"
authors = ["kornia.org <christie@kornia.org>"]
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bench]]
harness = false
name = "bench_linalg"

[dependencies]
approx = { workspace = true, optional = true }
glam = "0.32.0"
nalgebra = "0.34"
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
faer = { workspace = true }

[features]
approx = ["dep:approx"]
