[package]
name = "kornia-algebra"
description = "Algebraic types for kornia-rs"
authors = ["kornia.org <christie@kornia.org>"]
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bench]]
harness = false
name = "bench_linalg"

[[bench]]
harness = false
name = "bench_l2_line"

[[bench]]
harness = false
name = "bench_optim"

[[bench]]
harness = false
name = "bench_lie_group"

[[bench]]
harness = false
name = "bench_bundle_adjustment"

[[bench]]
harness = false
name = "bench_varpro"

[[bench]]
harness = false
name = "bench_comparative_linalg"

[[bench]]
harness = false
name = "bench_apex_ba"

[dependencies]
approx = { workspace = true, optional = true }
glam = "0.30.1"
nalgebra = "0.32"
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
faer = { workspace = true }
sophus_lie = "0.15.0"
nalgebra33 = { package = "nalgebra", version = "0.33" }

[features]
approx = ["dep:approx"]
# Placeholder: enable when apex_solver becomes available as a crate dependency
apex_solver_available = []