[package]
name = "kornia-apriltag"
authors = ["Aditya Kumar <git@adityais.dev>", "kornia.org <edgar@kornia.org>"]
description = "AprilTag marker detection and decoding in Rust"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bench]]
harness = false
name = "bench_decoding"

[[bench]]
harness = false
name = "bench_tagfamily"

[[bench]]
harness = false
name = "bench_threshold"
required-features = []

[features]
# Enable OpenCV comparison in bench_threshold.
# Requires the OpenCV C++ libraries (libopencv-dev) to be installed.
# Usage: cargo bench -p kornia-apriltag --bench bench_threshold --features opencv
opencv = ["dep:opencv"]

[dependencies]
kornia-algebra = { workspace = true }
kornia-image = { workspace = true }
rayon = { workspace = true }
kornia-imgproc = { workspace = true }
thiserror = { workspace = true }
# Optional: enable with --features opencv for benchmark comparisons.
opencv = { version = "0.93", optional = true, default-features = false, features = ["imgproc"] }

[dev-dependencies]
aprilgrid = "0.6"
apriltag = "0.4"
criterion = { workspace = true }
image = "0.25"
kornia-io = { workspace = true }
