[package]
name = "kornia-bow"
authors = ["Siddharth Rambhia <siddharth.rambhia@gmail.com>", "kornia.org <edgar@kornia.org>"]
description = "High-Performance Hierarchical Bag of Words"
categories = ["computer-vision", "science::robotics", "algorithms"]
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bench]]
harness = false
name = "bow_bench"

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
rayon = "1.10"
serde = { workspace = true }
serde-big-array = "0.5"
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []