[package]
name = "kornia-core-ops"
authors.workspace = true
description = "Tensor operations library in Rust for computer vision"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
kornia-core = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
