[package]
name = "kornia-icp"
description = "Iterative closest point algorithm library"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[dependencies]
faer = { workspace = true }
kiddo = "5.0.2"
kornia-3d = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
