[package]
name = "kornia-icp"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Iterative closest point algorithm library"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
faer = { workspace = true }
kiddo = "5.2.3"
kornia-3d = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
