[package]
name = "kornia-image"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Image types and traits for generating and manipulating images"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = true

[[bench]]
harness = false
name = "bench_image"

[dependencies]
arrow = { workspace = true, optional = true }
dlpack-rs = { git = "https://github.com/kornia/dlpack-rs", tag = "v0.3.2", default-features = false, optional = true }
kornia-tensor = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
half = { workspace = true }

[features]
default = []
arrow = ["dep:arrow"]
dlpack = ["dep:dlpack-rs", "kornia-tensor/dlpack"]
