[package]
name = "kornia-imgproc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Image processing operations in Rust"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = true

[[bench]]
harness = false
name = "bench_color"

[[bench]]
harness = false
name = "bench_resize"

[[bench]]
harness = false
name = "bench_metrics"

[[bench]]
harness = false
name = "bench_warp"

[[bench]]
harness = false
name = "bench_flip"

[[bench]]
harness = false
name = "bench_crop"

[[bench]]
harness = false
name = "bench_filters"

[[bench]]
harness = false
name = "bench_features"

[[bench]]
harness = false
name = "bench_pyramid"

[[bench]]
harness = false
name = "bench_gradient"

[[bench]]
harness = false
name = "bench_draw"

[[bench]]
harness = false
name = "bench_distortion"
required-features = ["opencv_bench"]

[[bench]]
harness = false
name = "bench_threshold"

[dependencies]
fast_image_resize = { version = "=5.1", features = ["rayon"] }
kornia-algebra = { workspace = true }
kornia-image = { workspace = true }
kornia-tensor = { workspace = true }
num-traits = { workspace = true }
opencv = { version = "0.92", optional = true }
rayon = { workspace = true }
thiserror = { workspace = true }
wide = "1.1.1"

[dev-dependencies]
criterion = { workspace = true }
image = "0.25"
imageproc = "0.25"
kornia-io = { workspace = true }
ndarray = { version = "0.15", features = ["rayon"] }
rand = { workspace = true }

[features]
opencv_bench = ["dep:opencv"]
