[package]
name = "kornia-imgproc"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Image processing operations in Rust"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = true

[[example]]
name = "bench_cuda_color_conversions"
required-features = ["cuda"]

[[bench]]
harness = false
name = "bench_color"

[[bench]]
harness = false
name = "bench_resize"

[[bench]]
harness = false
name = "bench_metrics"

[[bench]]
harness = false
name = "bench_warp"

[[bench]]
harness = false
name = "bench_flip"

[[bench]]
harness = false
name = "bench_crop"

[[bench]]
harness = false
name = "bench_filters"

[[bench]]
harness = false
name = "bench_features"

[[bench]]
harness = false
name = "bench_pyramid"

[[bench]]
harness = false
name = "bench_gradient"

[[bench]]
harness = false
name = "bench_draw"

[[bench]]
harness = false
name = "bench_morphology"

[[bench]]
harness = false
name = "bench_distance_transform"
required-features = ["opencv_bench"]

[[bench]]
harness = false
name = "bench_distortion"
required-features = ["opencv_bench"]

[[bench]]
harness = false
name = "bench_optical_flow"

[[bench]]
harness = false
name = "bench_contours"
required-features = ["opencv_bench"]

[dependencies]
cudarc = { workspace = true, features = ["f16"], optional = true }
half = { workspace = true, optional = true }
kornia-algebra = { workspace = true }
kornia-image = { workspace = true }
kornia-tensor = { workspace = true }
num-traits = { workspace = true }
opencv = { version = "0.99", optional = true }
rayon = { workspace = true }
thiserror = { workspace = true }
wide = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
kornia-io = { workspace = true }
ndarray = { workspace = true, features = ["rayon"] }
rand = { workspace = true }

[features]
# CUDA device backend + custom CUDA kernels (via the cudarc crate).
# Enables the `preprocess` module and the `cuda` kernels module.
cuda = ["dep:cudarc", "dep:half", "kornia-image/cuda", "kornia-tensor/cuda"]
opencv_bench = ["dep:opencv"]
