[package]
name = "kornia-io"
authors.workspace = true
description = "Image and Video IO library in Rust for computer vision"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
image = "0.25"
circular-buffer = "1.1.0"
kornia-image = { workspace = true }
png = "0.17"
jpeg-encoder = "0.6"
zune-jpeg = "0.4"
log = { workspace = true }
thiserror = { workspace = true }
tiff = "0.9"

# optional dependencies
gstreamer = { version = "0.23.5", optional = true }
gstreamer-app = { version = "0.23.5", optional = true }
turbojpeg = { version = "1.2", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[features]
gstreamer = ["dep:gstreamer", "dep:gstreamer-app"]
turbojpeg = ["dep:turbojpeg"]

[[bench]]
name = "bench_io"
harness = false
required-features = ["turbojpeg"]
