[package]
name = "kornia-io"
description = "Image and Video IO library in Rust for computer vision"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
features = ["gstreamer/v1_28"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
kornia-image = { workspace = true }
kornia-tensor = { workspace = true }
png = "0.17"
jpeg-encoder = "0.6"
zune-jpeg = "0.4"
log = { workspace = true }
thiserror = { workspace = true }
tiff = "0.10"

# for video capture from gstreamer sources
circular-buffer = { version = "1.1.0", optional = true }
gstreamer = { version = "0.23.5", optional = true }
gstreamer-app = { version = "0.23.5", optional = true }

# for fast jpeg encoding/decoding
turbojpeg = { version = "1.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# for video capture from v4l2 cameras
v4l = { version = "0.14.0", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }

[features]
gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:circular-buffer"]
turbojpeg = ["dep:turbojpeg"]
v4l = ["dep:v4l", "dep:libc"]

[[bench]]
name = "bench_io"
harness = false
required-features = ["turbojpeg"]

[[bench]]
name = "bench_gstreamer"
harness = false
required-features = ["gstreamer"]
