[package]
name = "kornia-io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Image and Video IO library in Rust for computer vision"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = true

[package.metadata.docs.rs]
all-features = true
features = ["gstreamer/v1_28"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
harness = false
name = "bench_io"
required-features = ["turbojpeg"]

[[bench]]
harness = false
name = "bench_gstreamer"
required-features = ["gstreamer"]

[dependencies]
# for video capture from gstreamer sources
circular-buffer = { version = "1.1.0", optional = true }
gstreamer = { version = "0.24", optional = true }
gstreamer-app = { version = "0.24", optional = true }
jpeg-encoder = "0.7"
kornia-image = { workspace = true }
kornia-tensor = { workspace = true }
little_exif = "0.6"
log = { workspace = true }
png = "0.18"
thiserror = { workspace = true }
tiff = "0.11"
# for fast jpeg encoding/decoding
turbojpeg = { version = "1.4", optional = true }
zune-jpeg = "0.5"

[dev-dependencies]
criterion = { workspace = true }
reqwest = { version = "0.13", features = ["blocking"] }
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }
# for video capture from v4l2 cameras
v4l = { version = "0.14.0", optional = true }

[features]
gstreamer = ["dep:circular-buffer", "dep:gstreamer", "dep:gstreamer-app"]
turbojpeg = ["dep:turbojpeg"]
v4l = ["dep:libc", "dep:v4l"]
