[package]
name = "kornia-linalg"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["std"]

std = ["glam/std"]
libm = ["glam/libm"]

[dependencies]
faer = { workspace = true }
glam = { version = "0.30.0", default-features = false }


[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bench_linalg"
harness = false