[package]
name = "kornia-linalg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Linear algebra operations for kornia"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
publish = true

[[bench]]
harness = false
name = "bench_linalg"

[dependencies]
glam = { version = "0.30.0", default-features = false }
nalgebra = "0.32"
thiserror = "1.0"

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
faer = { workspace = true }

[features]
default = ["std"]
libm = ["glam/libm"]
std = ["glam/std"]
