[package]
name = "kornia-nn"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = "Neural network operators in Rust"
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
include = { workspace = true }

[[bench]]
harness = false
name = "bench_linear"

[dependencies]
matrixmultiply = "0.3"

[dev-dependencies]
approx = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
criterion = { workspace = true }
gemm = "=0.18.2"
rand = { workspace = true }
wide = "0.7.32"

[features]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
