[package]
name = "kornia-paligemma"
description = "Google Paligemma model in Rust"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
candle-core = { version = "0.8.4" }
candle-transformers = { version = "0.8.4" }
candle-examples = "0.8.4"
candle-nn = { version = "0.8.4" }
hf-hub = "0.4.2"
kornia-imgproc = { workspace = true }
kornia-image = { workspace = true }
log = { workspace = true }
serde_json = "1"
tokenizers = "0.21.1"
thiserror = "2"

[features]
cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]
