[package]
authors = ["Christie J Purackal <christie@kornia.org>"]
name = "kornia-pnp"
description = "Perspective-n-Point solvers for kornia"

edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
opencv_bench = []

[dependencies]
glam = { version = "0.30.0", default-features = false }
kornia-lie = { workspace = true }
kornia-linalg = { workspace = true }
kornia-imgproc = { workspace = true }
nalgebra = "0.32"
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
opencv = "0.92"

[[bench]]
name = "bench_pnp"
harness = false
