[package]
authors = ["Christie J Purackal <christie@kornia.org>"]
name = "kornia-pnp"
description = "Perspective-n-Point solvers for kornia"

categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
opencv_bench = ["dep:opencv"]

[dependencies]
glam = { version = "0.30.0", default-features = false }
kornia-algebra = { workspace = true }
kornia-linalg = { workspace = true }
kornia-imgproc = { workspace = true }
nalgebra = "0.32"
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
opencv = { version = "0.92", optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bench_pnp"
harness = false
required-features = ["opencv_bench"]
