[package]
authors = ["Christie J Purackal <christie@kornia.org>"]
name = "kornia-pnp"
description = "Perspective-n-Point solvers for kornia"
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = true
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bench]]
harness = false
name = "bench_pnp"
required-features = ["opencv_bench"]

[dependencies]
glam = { version = "0.30.0", default-features = false }
kornia-algebra = { workspace = true }
kornia-imgproc = { workspace = true }
kornia-linalg = { workspace = true }
log = { workspace = true }
nalgebra = "0.32"
opencv = { version = "0.92", optional = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[features]
opencv_bench = ["dep:opencv"]
